# rg_poetry

./: pyproject.toml
src/meter_search/: corpusclass.py  grammar.py  pun.py
src/phonetics/: apple_phonemes.py  corpus_parse.py  parse_nltk  parse_spacy.py
src/utils/: file_handling.py  keyness.py  utils.py
