[tool.poetry]
name = "rhymeghoul"
version = "0.1.0"
description = ""
authors = ["eliotl <23159423+eliotl@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = { version = "^1.1", python = ">=3.9,<3.11" }
spacy = "^3.1.3"
nltk = "^3.6.5"

[tool.poetry.dev-dependencies]
pyobjc = "^7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
